# mtcnn_ncnn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
mtcnn_AS/: gradle.properties
mtcnn_AS/app/: CMakeLists.txt  build.gradle
mtcnn_AS/app/src/androidTest/java/com/mtcnn_as/: ExampleInstrumentedTest.java
mtcnn_AS/app/src/main/: AndroidManifest.xml
mtcnn_AS/app/src/main/cpp/: mtcnn.cpp  mtcnn.h  mtcnn_jni.cpp
mtcnn_AS/app/src/main/cpp/include/: layer_type_enum.h  platform.h
mtcnn_AS/app/src/main/java/com/mtcnn_as/: MTCNN.java  MainActivity.java
mtcnn_AS/app/src/main/res/drawable/: toggle_btn.xml
mtcnn_AS/app/src/main/res/layout/: activity_main.xml  main.xml
mtcnn_AS/app/src/main/res/values/: strings.xml
mtcnn_AS/app/src/test/java/com/mtcnn_as/: ExampleUnitTest.java
src/: main.cpp  mtcnn.cpp  mtcnn.h  mtcnn_dlib_image_dir.cpp  mtcnn_image_dir.cpp  mtcnn_video.cpp
tools/: build_android.bat  caffe2ncnn.bat  copyNcnn.bat  copydeps.bat  generatepb.bat  mtcnn2ncnn.bat  mtcnnBuild.bat  ncnn.bat  protobuf.bat
tools/backup/: CMakeLists.txt  convolutiondepthwise.cpp
